c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_struct_tags/param_undeclared.c
// In our implementation, this function definition fails tag resolution because
// the 'struct s' type hasn't been declared. In a fully conforming
// implementation, it would fail because you can't declare incomplete parameter
// types in function definitions.
int foo(struct s x) {
    return 0;
}